--- a/public/css/app.css
+++ b/public/css/app.css
@@ -872,6 +872,10 @@ select {
   margin-left: 0px;
   margin-right: 0px;
 }
+.mx-14 {
+  margin-left: 3.5rem;
+  margin-right: 3.5rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
